add details about why i took a programming course

--- a/index.html
+++ b/index.html
@@ -306,57 +306,86 @@
 
       </div>
 
-      <p class="background-title">Why I took a programming course at Epicodus</p>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <p class="background-title">Why I took a programming course at Epicodus</p>
+            </div>
+            <div class="panel-body">
+              <p>I decided to learn programming for a number of reasons.
+                It had always been in the back of my mind as an interesting skill to have,
+                but until recently the time had just never been right.
+                It was a skill I first realized I needed when my friend and I wanted to make video games,
+                but we were having trouble getting a programmer that would stick and had the same ideals that we did.
+                So, since my friend was already supplying some art and design,
+                I decided to learn programming so that besides just art I could also add more to the game we wanted to make.
+                Another reason was that the most recent job I had was a situation that I no longer wished to be a part of.
+                I wanted more and better career opportunities.
+                After some research I decided that Epicodus was the best school for me.
+                I'm not one to wait for the "right" moment,
+                so I packed my bags, 
+                moved across the United States,
+                and found a place where I could study and be close to the school.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
 
     </div>
 
 
     <hr>
-    <div class="container">
-      <div class="row">
-        <div class="interests">
-          <div class="col-md-4">
-            <h3 class="title">Interests</h3>
-            <ul>
-              <li>Dungeons and Dragons</li>
-              <li>Video Games</li>
-              <li>Fantasy Novels</li>
-            </ul>
+    <div class="well">
+      <div class="container">
+        <div class="row">
+          <div class="interests">
+            <div class="col-md-4">
+              <h3 class="title">Interests</h3>
+              <ul>
+                <li>Dungeons and Dragons</li>
+                <li>Video Games</li>
+                <li>Fantasy Novels</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="hobbies">
-          <div class="col-md-4">
-            <h3 class="title">Hobbies</h3>
-            <ul>
-              <li>Creating Chainmail</li>
-              <li>Painting</li>
-              <li>Digital Art</li>
-            </ul>
+          <div class="hobbies">
+            <div class="col-md-4">
+              <h3 class="title">Hobbies</h3>
+              <ul>
+                <li>Creating Chainmail</li>
+                <li>Painting</li>
+                <li>Digital Art</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="skills">
-          <div class="col-md-4">
-            <h3 class="title">Skills</h3>
-            <ul>
-              <li>Photoshop</li>
-              <li>Cooking</li>
-              <li>Making Lists</li>
-                <ol>
-                  <p class="daily-activities-title">Daily Activities</p>
-                  <li>Wake up at <span class="morning">5:45</span><span class="AM">AM</span> to work out</li>
-                  <li>Get ready for class</li>
-                  <li>Take the bus to Downtown Seattle</li>
-                  <li>Practice programming from <span class="morning">8:00</span><span class="AM">AM</span>-<span class="evening">5:00</span><span class="PM">PM</span></li>
-                  <li>Return to apartment via Bus</li>
-                  <li>Go over what I learned that day</li>
-                  <li>Set out my clothes for the next day</li>
-                  <li>Go to sleep no later than <span class="evening">9</span><span class="PM">PM</span></li>
-                </ol>
-            </ul>
+          <div class="skills">
+            <div class="col-md-4">
+              <h3 class="title">Skills</h3>
+              <ul>
+                <li>Photoshop</li>
+                <li>Cooking</li>
+                <li>Making Lists</li>
+                  <ol>
+                    <p class="daily-activities-title">Daily Activities</p>
+                    <li>Wake up at <span class="morning">5:45</span><span class="AM">AM</span> to work out</li>
+                    <li>Get ready for class</li>
+                    <li>Take the bus to Downtown Seattle</li>
+                    <li>Practice programming from <span class="morning">8:00</span><span class="AM">AM</span>-<span class="evening">5:00</span><span class="PM">PM</span></li>
+                    <li>Return to apartment via Bus</li>
+                    <li>Go over what I learned that day</li>
+                    <li>Set out my clothes for the next day</li>
+                    <li>Go to sleep no later than <span class="evening">9</span><span class="PM">PM</span></li>
+                  </ol>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
 
 
   </body>
