add font style to webpage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Charm|EB+Garamond|Satisfy" rel="stylesheet">
     <title>Portfolio Landing Page</title>
   </head>
   <body>
@@ -313,7 +314,7 @@
               <p class="background-title">Why I took a programming course at Epicodus</p>
             </div>
             <div class="panel-body">
-              <p>I decided to learn programming for a number of reasons.
+              <p class="why">I decided to learn programming for a number of reasons.
                 It had always been in the back of my mind as an interesting skill to have,
                 but until recently the time had just never been right.
                 It was a skill I first realized I needed when my friend and I wanted to make video games,
@@ -324,7 +325,7 @@
                 I wanted more and better career opportunities.
                 After some research I decided that Epicodus was the best school for me.
                 I'm not one to wait for the "right" moment,
-                so I packed my bags, 
+                so I packed my bags,
                 moved across the United States,
                 and found a place where I could study and be close to the school.</p>
             </div>
@@ -332,7 +333,6 @@
         </div>
 
       </div>
-
 
     </div>
 
