add various styles to css

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Charm|EB+Garamond|Satisfy" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Charm|EB+Garamond|Inconsolata|Titillium+Web" rel="stylesheet">
     <title>Portfolio Landing Page</title>
   </head>
+
   <body>
     <div class="container">
+      <img class="image-mj" src="img/picture-of-me.jpg" alt="A picture of Micaela Jawor">
       <div class="jumbotron">
         <h1 class="title">Portfolio Landing Page</h1>
         <h2 class="name">Micaela Jawor</h2>
-        <img class="image-mj" src="img/picture-of-me.jpg" alt="A picture of Micaela Jawor">
       </div>
     </div>
 
@@ -287,18 +288,23 @@
             </div>
             <div class="panel-body">
               <ul>
-                <li>Highschool</li>
+                <li>LabCorp</li>
                 <ul>
-                  <li>Name: Our Lady of Mercy Lauralton Hall</li>
-                  <li>Location: Milford, CT</li>
-                  <li>Dates Attended: 2007-2011</li>
+                  <li>Title: Species Analyst Specialist</li>
+                  <li>Location: Burlington, NC</li>
+                  <li>Dates Worked: 2017-2018</li>
                 </ul>
-                <li>College</li>
+                <li>Saint Catherine Duplicate Bridge Club</li>
                 <ul>
-                  <li>Name: Champlain College</li>
-                  <li>Location: Burlington, VT</li>
-                  <li>Dates Attended: 2011-2016</li>
-                  <li>Degree: Bachelor's Degree in Game Art and Animation</li>
+                  <li>Title: Assistant</li>
+                  <li>Location: West Palm Beach, FL</li>
+                  <li>Dates Worked: 2013-2017</li>
+                </ul>
+                <li>GigSmart</li>
+                <ul>
+                  <li>Title: Freelance Graphic Designer</li>
+                  <li>Location: Boston, MA</li>
+                  <li>Dates Worked: 2016-2016</li>
                 </ul>
               </ul>
             </div>
@@ -338,8 +344,8 @@
 
 
     <hr>
-    <div class="well">
-      <div class="container">
+    <div class="container">
+      <div class="well">
         <div class="row">
           <div class="interests">
             <div class="col-md-4">
