add about me and more styles to css

--- a/index.html
+++ b/index.html
@@ -250,7 +250,14 @@
     </div>
 
     <hr>
-    <h3>About Me</h3>
+    <div class="container">
+      <h3>About Me</h3>
+      <p class="about">Hello, my name is <strong>Micaela</strong> and I am a digital artist on the road to becoming a programmer.
+        I love <em>books</em>, <em>games</em>, and <em>music</em>.
+        I appreciate many different cuisines and I enjoy trying new food.
+        I have lived many places and I hope to travel to many more gaining valuable skills and experiences.</p>
+    </div>
+
 
     <hr>
     <div class="container">
