--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/helipad.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href=""></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -42,7 +42,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/wiki.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/wiki-page">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -56,7 +56,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/kangaroo.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/vacation">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/calendar.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/week-in-review">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -84,7 +84,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/music.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/favorite-band">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/blog.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/blog">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/book.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/boring-lecture">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -126,7 +126,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/cupcake.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://micaeladj.github.io/cupcakes/">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -140,7 +140,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/css.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/css-class-practice">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -154,7 +154,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/mermaid.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/Resort_Website">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -168,7 +168,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/hogwarts.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/favorite-places">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -182,7 +182,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/rocket.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/my-first-webpage">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -196,7 +196,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/fish.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/Cosmo-The-Angry-Fish-Blog">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -210,7 +210,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/cookie.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/cookie-recipe">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -224,7 +224,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/goodbye.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/goodbye-world">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -238,7 +238,7 @@
             </div>
             <div class="panel-body">
               <img class="img-responsive" src="img/hello.jpeg" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="#"></a>click here to view</a></p>
+              <p class="link"><a href="https://github.com/MicaelaDJ/hello-world">click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
