--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="img/favicomatic/favicon.ico" sizes="16x16" />
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Charm|EB+Garamond|Inconsolata|Titillium+Web" rel="stylesheet">
@@ -29,7 +30,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/helipad.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://micaeladj.github.io/Portfolio-Landing-Page/">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A portfolio landing page using HTML and CSS</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -43,7 +44,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/wiki.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/wiki-page">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Recreate wiki home page</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -57,7 +58,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/kangaroo.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/vacation">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A page using bootstrap depicting a vacation spot</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -71,7 +72,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/calendar.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/week-in-review">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A simple webpage about what we learned this week</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -83,9 +84,9 @@
               <p class="project" class="panel-title">favorite-band</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/music.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/musicnote.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/favorite-band">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A simple webpage about a musical group</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -99,7 +100,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/blog.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/blog">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Practice divs on a blog site</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -113,7 +114,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/book.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/boring-lecture">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Practicing styling classes in css</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -127,7 +128,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/cupcake.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://micaeladj.github.io/cupcakes/">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A simple webpage about cupcakes</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -141,7 +142,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/css.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/css-class-practice">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Practicing creating classes in css</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -155,7 +156,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/mermaid.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/Resort_Website">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A simple webpage about a resort with  various pages</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -169,21 +170,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/hogwarts.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/favorite-places">click here to view</a></p>
-              <p>Video Games</p>
-              <p class="language">HTML + CSS</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <p class="project" class="panel-title">my-first-webpage</p>
-            </div>
-            <div class="panel-body">
-              <img class="img-responsive" src="img/rocket.png" class="img-rounded" id="Panel_Image">
-              <p class="link"><a href="https://github.com/MicaelaDJ/my-first-webpage">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">A simple webpage depicting various places</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -197,7 +184,21 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/fish.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/Cosmo-The-Angry-Fish-Blog">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Simple web page about my beta fish Cosmo</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">my-first-webpage</p>
+            </div>
+            <div class="panel-body">
+              <img class="img-responsive" src="img/rocket.png" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="https://github.com/MicaelaDJ/my-first-webpage">click here to view</a></p>
+              <p class="brief-description">My very first simple web page</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -211,7 +212,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/cookie.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/cookie-recipe">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Simple web page of a cookie recipe</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -225,7 +226,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/goodbye.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/goodbye-world">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Simple web page that says goodbye in various languages</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -239,7 +240,7 @@
             <div class="panel-body">
               <img class="img-responsive" src="img/hello.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="https://github.com/MicaelaDJ/hello-world">click here to view</a></p>
-              <p>Video Games</p>
+              <p class="brief-description">Simple web page that says hello in various languages</p>
               <p class="language">HTML + CSS</p>
             </div>
           </div>
@@ -383,14 +384,15 @@
                 <li>Making Lists</li>
                   <ol>
                     <p class="daily-activities-title">Daily Activities</p>
-                    <li>Wake up at <span class="morning">5:45</span><span class="AM">AM</span> to work out</li>
-                    <li>Get ready for class</li>
-                    <li>Take the bus to Downtown Seattle</li>
-                    <li>Practice programming from <span class="morning">8:00</span><span class="AM">AM</span>-<span class="evening">5:00</span><span class="PM">PM</span></li>
-                    <li>Return to apartment via Bus</li>
-                    <li>Go over what I learned that day</li>
-                    <li>Set out my clothes for the next day</li>
-                    <li>Go to sleep no later than <span class="evening">9</span><span class="PM">PM</span></li>
+                      <li>Wake up at <span class="morning">5:45</span><span class="AM">AM</span> to work out</li>
+                      <li>Get ready for class</li>
+                      <li>Take the bus to Downtown Seattle</li>
+                      <li>Practice programming from <span class="morning">8:00</span><span class="AM">AM</span>-<span class="evening">5:00</span><span class="PM">PM</span></li>
+                      <li>Return to apartment via Bus</li>
+                      <li>Go over what I learned that day</li>
+                      <li>Set out my clothes for the next day</li>
+                      <li>Go to sleep no later than <span class="evening">9</span><span class="PM">PM</span></li>
+
                   </ol>
               </ul>
             </div>
