add styles to bottom of page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/png" href="img/favicomatic/favicon.ico" sizes="16x16" />
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Charm|EB+Garamond|Inconsolata|Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Charm|Comfortaa|EB+Garamond|Inconsolata|Titillium+Web" rel="stylesheet">
     <title>Portfolio Landing Page</title>
   </head>
 
@@ -384,6 +384,7 @@
                 <li>Making Lists</li>
                   <ol>
                     <p class="daily-activities-title">Daily Activities</p>
+                    <div class="daily">
                       <li>Wake up at <span class="morning">5:45</span><span class="AM">AM</span> to work out</li>
                       <li>Get ready for class</li>
                       <li>Take the bus to Downtown Seattle</li>
@@ -392,7 +393,7 @@
                       <li>Go over what I learned that day</li>
                       <li>Set out my clothes for the next day</li>
                       <li>Go to sleep no later than <span class="evening">9</span><span class="PM">PM</span></li>
-
+                    </div>
                   </ol>
               </ul>
             </div>
